[gd_scene load_steps=4 format=3 uid="uid://c5jow6o5qqdx7"]

[ext_resource type="Script" uid="uid://bn35v1n7clj2c" path="res://main_menu.gd" id="1_80nbo"]
[ext_resource type="PackedScene" uid="uid://b2axm8p7blmji" path="res://fade_transition.tscn" id="2_e2o6t"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e2o6t"]

[node name="Main Menu" type="Node2D"]
material = SubResource("CanvasItemMaterial_e2o6t")
script = ExtResource("1_80nbo")

[node name="button manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 435.0
offset_top = 214.0
offset_right = 755.0
offset_bottom = 435.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" type="Button" parent="button manager"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
text = "start"

[node name="load" type="Button" parent="button manager"]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = "load
"

[node name="quit" type="Button" parent="button manager"]
layout_mode = 0
offset_left = 50.0
offset_top = 150.0
offset_right = 200.0
offset_bottom = 200.0
text = "quit"

[node name="Fade_transition" parent="button manager" instance=ExtResource("2_e2o6t")]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = -435.0
offset_top = -214.0
offset_right = 2113.0
offset_bottom = 1145.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Faade_Timer" type="Timer" parent="button manager/Fade_transition"]

[connection signal="pressed" from="button manager/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="button manager/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="button manager/quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="button manager/Fade_transition/Faade_Timer" to="." method="_on_faade_timer_timeout"]
